--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = gp_lts_workflow
 author = Gammapy developers
-author_email = 
+author_email =
 license = BSD 3-Clause
 license_file = licenses/LICENSE.rst
 url = http://docs.astropy.org/projects/package-template/
@@ -17,6 +17,7 @@ packages = find:
 python_requires = >=3.7
 setup_requires = setuptools_scm
 install_requires =
+    astropy
     numpy
     scipy
 
